--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "canvas": "^3.2.1",
     "jspdf": "^4.0.0",
     "lightningcss": "^1.31.1",
+    "mammoth": "^1.11.0",
     "next": "16.1.4",
     "nodemailer": "^7.0.13",
     "pdf-lib": "^1.17.1",
