--- a/package.json
+++ b/package.json
@@ -19,15 +19,13 @@
     "@types/pg": "^8.16.0",
     "@vercel/blob": "^2.1.0",
     "bcrypt": "^6.0.0",
-    "canvas": "^3.2.1",
     "jspdf": "^4.0.0",
     "lightningcss": "^1.31.1",
     "mammoth": "^1.11.0",
     "next": "16.1.4",
     "nodemailer": "^7.0.13",
     "pdf-lib": "^1.17.1",
-    "pdf-parse": "^2.4.5",
-    "pdf-to-img": "^5.0.0",
+    "pdfjs-dist": "^4.11.235",
     "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "react": "19.2.3",
@@ -41,7 +39,6 @@
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.9",
-    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.1",
