--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "next": "16.1.4",
     "nodemailer": "^7.0.13",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^3.11.174",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "react": "19.2.3",
